@@ -1,4 +1,6 @@
 ver 0.15.16 (2010/??/??)
+* encoders:
+  - lame: explicitly configure the output sample rate
 
 
 ver 0.15.15 (2010/11/08)
